parser.output
Terminals unused in grammar

   T_COMMA
   IFX


Rules useless in parser due to conflicts

    8 $@3: /* empty */


State 9 conflicts: 9 shift/reduce, 1 reduce/reduce
State 36 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program $end

    1 program: stmt_list

    2 stmt_list: stmt
    3          | stmt_list stmt

    4 $@1: /* empty */

    5 compound_stmt: T_LEFT_BRACKET $@1 T_RIGHT_BRACKET

    6 $@2: /* empty */

    7 compound_stmt: T_LEFT_BRACKET $@2 stmt_list T_RIGHT_BRACKET

    8 $@3: /* empty */

    9 compound_stmt: T_LEFT_BRACKET $@3 error T_RIGHT_BRACKET

   10 stmt: matched_stmt
   11     | open_stmt
   12     | error T_SEMICOLON
   13     | T_LEFT_BRACKET stmt_list error

   14 matched_stmt: simple_stmt
   15             | compound_stmt
   16             | T_IF T_LEFT_PAREN expr T_RIGHT_PAREN matched_stmt T_ELSE matched_stmt
   17             | error T_ELSE matched_stmt
   18             | T_WHILE T_LEFT_PAREN expr T_RIGHT_PAREN matched_stmt
   19             | T_WHILE T_LEFT_PAREN expr error matched_stmt
   20             | T_WHILE error expr T_RIGHT_PAREN matched_stmt

   21 open_stmt: T_IF T_LEFT_PAREN expr T_RIGHT_PAREN stmt
   22          | T_IF T_LEFT_PAREN expr T_RIGHT_PAREN matched_stmt T_ELSE open_stmt
   23          | T_IF T_LEFT_PAREN expr error stmt
   24          | T_IF error expr T_RIGHT_PAREN stmt

   25 simple_stmt: T_BOOLEAN T_ID T_ATRIBUTION expr T_SEMICOLON
   26            | T_INT T_ID T_ATRIBUTION expr T_SEMICOLON
   27            | T_INT T_ID T_ATRIBUTION error T_SEMICOLON
   28            | T_BOOLEAN T_ID T_ATRIBUTION error T_SEMICOLON
   29            | T_PRINT T_LEFT_PAREN expr T_RIGHT_PAREN T_SEMICOLON
   30            | T_PRINT T_LEFT_PAREN expr error T_SEMICOLON
   31            | T_ID T_ATRIBUTION expr T_SEMICOLON
   32            | T_READ T_LEFT_PAREN T_ID T_RIGHT_PAREN T_SEMICOLON

   33 expr: primary_expr
   34     | expr T_SUM expr
   35     | expr T_MINUS expr
   36     | expr T_MULT expr
   37     | expr T_DIV expr
   38     | expr T_AND expr
   39     | expr T_OR expr
   40     | T_NOT expr
   41     | expr T_EQUAL expr
   42     | expr T_NOT_EQUAL expr
   43     | expr T_LESSER expr
   44     | expr T_GREATER expr
   45     | expr T_LESSER_EQUAL expr
   46     | expr T_GREATER_EQUAL expr
   47     | T_MINUS expr
   48     | T_LEFT_PAREN expr T_RIGHT_PAREN

   49 primary_expr: T_NUMBER
   50             | T_ID
   51             | T_TRUE
   52             | T_FALSE


Terminals, with rules where they appear

$end (0) 0
error (256) 9 12 13 17 19 20 23 24 27 28 30
T_ID (258) 25 26 27 28 31 32 50
T_NUMBER (259) 49
T_IF (260) 16 21 22 23 24
T_ELSE (261) 16 17 22
T_WHILE (262) 18 19 20
T_PRINT (263) 29 30
T_READ (264) 32
T_TRUE (265) 51
T_FALSE (266) 52
T_INT (267) 26 27
T_BOOLEAN (268) 25 28
T_EQUAL (269) 41
T_NOT_EQUAL (270) 42
T_LESSER_EQUAL (271) 45
T_GREATER_EQUAL (272) 46
T_LESSER (273) 43
T_GREATER (274) 44
T_AND (275) 38
T_OR (276) 39
T_NOT (277) 40
T_ATRIBUTION (278) 25 26 27 28 31
T_LEFT_PAREN (279) 16 18 19 21 22 23 29 30 32 48
T_RIGHT_PAREN (280) 16 18 20 21 22 24 29 32 48
T_LEFT_BRACKET (281) 5 7 9 13
T_RIGHT_BRACKET (282) 5 7 9
T_SEMICOLON (283) 12 25 26 27 28 29 30 31 32
T_COMMA (284)
T_MINUS (285) 35 47
T_SUM (286) 34
T_DIV (287) 37
T_MULT (288) 36
UMINUS (289)
IFX (290)


Nonterminals, with rules where they appear

$accept (36)
    on left: 0
program (37)
    on left: 1, on right: 0
stmt_list (38)
    on left: 2 3, on right: 1 3 7 13
compound_stmt (39)
    on left: 5 7 9, on right: 15
$@1 (40)
    on left: 4, on right: 5
$@2 (41)
    on left: 6, on right: 7
$@3 (42)
    on left: 8, on right: 9
stmt (43)
    on left: 10 11 12 13, on right: 2 3 21 23 24
matched_stmt (44)
    on left: 14 15 16 17 18 19 20, on right: 10 16 17 18 19 20 22
open_stmt (45)
    on left: 21 22 23 24, on right: 11 22
simple_stmt (46)
    on left: 25 26 27 28 29 30 31 32, on right: 14
expr (47)
    on left: 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48, on right:
    16 18 19 20 21 22 23 24 25 26 29 30 31 34 35 36 37 38 39 40 41
    42 43 44 45 46 47 48
primary_expr (48)
    on left: 49 50 51 52, on right: 33


State 0

    0 $accept: . program $end

    error           shift, and go to state 1
    T_ID            shift, and go to state 2
    T_IF            shift, and go to state 3
    T_WHILE         shift, and go to state 4
    T_PRINT         shift, and go to state 5
    T_READ          shift, and go to state 6
    T_INT           shift, and go to state 7
    T_BOOLEAN       shift, and go to state 8
    T_LEFT_BRACKET  shift, and go to state 9

    program        go to state 10
    stmt_list      go to state 11
    compound_stmt  go to state 12
    stmt           go to state 13
    matched_stmt   go to state 14
    open_stmt      go to state 15
    simple_stmt    go to state 16


State 1

   12 stmt: error . T_SEMICOLON
   17 matched_stmt: error . T_ELSE matched_stmt

    T_ELSE       shift, and go to state 17
    T_SEMICOLON  shift, and go to state 18


State 2

   31 simple_stmt: T_ID . T_ATRIBUTION expr T_SEMICOLON

    T_ATRIBUTION  shift, and go to state 19


State 3

   16 matched_stmt: T_IF . T_LEFT_PAREN expr T_RIGHT_PAREN matched_stmt T_ELSE matched_stmt
   21 open_stmt: T_IF . T_LEFT_PAREN expr T_RIGHT_PAREN stmt
   22          | T_IF . T_LEFT_PAREN expr T_RIGHT_PAREN matched_stmt T_ELSE open_stmt
   23          | T_IF . T_LEFT_PAREN expr error stmt
   24          | T_IF . error expr T_RIGHT_PAREN stmt

    error         shift, and go to state 20
    T_LEFT_PAREN  shift, and go to state 21


State 4

   18 matched_stmt: T_WHILE . T_LEFT_PAREN expr T_RIGHT_PAREN matched_stmt
   19             | T_WHILE . T_LEFT_PAREN expr error matched_stmt
   20             | T_WHILE . error expr T_RIGHT_PAREN matched_stmt

    error         shift, and go to state 22
    T_LEFT_PAREN  shift, and go to state 23


State 5

   29 simple_stmt: T_PRINT . T_LEFT_PAREN expr T_RIGHT_PAREN T_SEMICOLON
   30            | T_PRINT . T_LEFT_PAREN expr error T_SEMICOLON

    T_LEFT_PAREN  shift, and go to state 24


State 6

   32 simple_stmt: T_READ . T_LEFT_PAREN T_ID T_RIGHT_PAREN T_SEMICOLON

    T_LEFT_PAREN  shift, and go to state 25


State 7

   26 simple_stmt: T_INT . T_ID T_ATRIBUTION expr T_SEMICOLON
   27            | T_INT . T_ID T_ATRIBUTION error T_SEMICOLON

    T_ID  shift, and go to state 26


State 8

   25 simple_stmt: T_BOOLEAN . T_ID T_ATRIBUTION expr T_SEMICOLON
   28            | T_BOOLEAN . T_ID T_ATRIBUTION error T_SEMICOLON

    T_ID  shift, and go to state 27


State 9

    5 compound_stmt: T_LEFT_BRACKET . $@1 T_RIGHT_BRACKET
    7              | T_LEFT_BRACKET . $@2 stmt_list T_RIGHT_BRACKET
    9              | T_LEFT_BRACKET . $@3 error T_RIGHT_BRACKET
   13 stmt: T_LEFT_BRACKET . stmt_list error

    error           shift, and go to state 1
    T_ID            shift, and go to state 2
    T_IF            shift, and go to state 3
    T_WHILE         shift, and go to state 4
    T_PRINT         shift, and go to state 5
    T_READ          shift, and go to state 6
    T_INT           shift, and go to state 7
    T_BOOLEAN       shift, and go to state 8
    T_LEFT_BRACKET  shift, and go to state 9

    error            [reduce using rule 6 ($@2)]
    error            [reduce using rule 8 ($@3)]
    T_ID             [reduce using rule 6 ($@2)]
    T_IF             [reduce using rule 6 ($@2)]
    T_WHILE          [reduce using rule 6 ($@2)]
    T_PRINT          [reduce using rule 6 ($@2)]
    T_READ           [reduce using rule 6 ($@2)]
    T_INT            [reduce using rule 6 ($@2)]
    T_BOOLEAN        [reduce using rule 6 ($@2)]
    T_LEFT_BRACKET   [reduce using rule 6 ($@2)]
    T_RIGHT_BRACKET  reduce using rule 4 ($@1)

    stmt_list      go to state 28
    compound_stmt  go to state 12
    $@1            go to state 29
    $@2            go to state 30
    $@3            go to state 31
    stmt           go to state 13
    matched_stmt   go to state 14
    open_stmt      go to state 15
    simple_stmt    go to state 16


State 10

    0 $accept: program . $end

    $end  shift, and go to state 32


State 11

    1 program: stmt_list .
    3 stmt_list: stmt_list . stmt

    error           shift, and go to state 1
    T_ID            shift, and go to state 2
    T_IF            shift, and go to state 3
    T_WHILE         shift, and go to state 4
    T_PRINT         shift, and go to state 5
    T_READ          shift, and go to state 6
    T_INT           shift, and go to state 7
    T_BOOLEAN       shift, and go to state 8
    T_LEFT_BRACKET  shift, and go to state 9

    $end  reduce using rule 1 (program)

    compound_stmt  go to state 12
    stmt           go to state 33
    matched_stmt   go to state 14
    open_stmt      go to state 15
    simple_stmt    go to state 16


State 12

   15 matched_stmt: compound_stmt .

    $default  reduce using rule 15 (matched_stmt)


State 13

    2 stmt_list: stmt .

    $default  reduce using rule 2 (stmt_list)


State 14

   10 stmt: matched_stmt .

    $default  reduce using rule 10 (stmt)


State 15

   11 stmt: open_stmt .

    $default  reduce using rule 11 (stmt)


State 16

   14 matched_stmt: simple_stmt .

    $default  reduce using rule 14 (matched_stmt)


State 17

   17 matched_stmt: error T_ELSE . matched_stmt

    error           shift, and go to state 34
    T_ID            shift, and go to state 2
    T_IF            shift, and go to state 35
    T_WHILE         shift, and go to state 4
    T_PRINT         shift, and go to state 5
    T_READ          shift, and go to state 6
    T_INT           shift, and go to state 7
    T_BOOLEAN       shift, and go to state 8
    T_LEFT_BRACKET  shift, and go to state 36

    compound_stmt  go to state 12
    matched_stmt   go to state 37
    simple_stmt    go to state 16


State 18

   12 stmt: error T_SEMICOLON .

    $default  reduce using rule 12 (stmt)


State 19

   31 simple_stmt: T_ID T_ATRIBUTION . expr T_SEMICOLON

    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44

    expr          go to state 45
    primary_expr  go to state 46


State 20

   24 open_stmt: T_IF error . expr T_RIGHT_PAREN stmt

    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44

    expr          go to state 47
    primary_expr  go to state 46


State 21

   16 matched_stmt: T_IF T_LEFT_PAREN . expr T_RIGHT_PAREN matched_stmt T_ELSE matched_stmt
   21 open_stmt: T_IF T_LEFT_PAREN . expr T_RIGHT_PAREN stmt
   22          | T_IF T_LEFT_PAREN . expr T_RIGHT_PAREN matched_stmt T_ELSE open_stmt
   23          | T_IF T_LEFT_PAREN . expr error stmt

    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44

    expr          go to state 48
    primary_expr  go to state 46


State 22

   20 matched_stmt: T_WHILE error . expr T_RIGHT_PAREN matched_stmt

    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44

    expr          go to state 49
    primary_expr  go to state 46


State 23

   18 matched_stmt: T_WHILE T_LEFT_PAREN . expr T_RIGHT_PAREN matched_stmt
   19             | T_WHILE T_LEFT_PAREN . expr error matched_stmt

    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44

    expr          go to state 50
    primary_expr  go to state 46


State 24

   29 simple_stmt: T_PRINT T_LEFT_PAREN . expr T_RIGHT_PAREN T_SEMICOLON
   30            | T_PRINT T_LEFT_PAREN . expr error T_SEMICOLON

    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44

    expr          go to state 51
    primary_expr  go to state 46


State 25

   32 simple_stmt: T_READ T_LEFT_PAREN . T_ID T_RIGHT_PAREN T_SEMICOLON

    T_ID  shift, and go to state 52


State 26

   26 simple_stmt: T_INT T_ID . T_ATRIBUTION expr T_SEMICOLON
   27            | T_INT T_ID . T_ATRIBUTION error T_SEMICOLON

    T_ATRIBUTION  shift, and go to state 53


State 27

   25 simple_stmt: T_BOOLEAN T_ID . T_ATRIBUTION expr T_SEMICOLON
   28            | T_BOOLEAN T_ID . T_ATRIBUTION error T_SEMICOLON

    T_ATRIBUTION  shift, and go to state 54


State 28

    3 stmt_list: stmt_list . stmt
   13 stmt: T_LEFT_BRACKET stmt_list . error

    error           shift, and go to state 55
    T_ID            shift, and go to state 2
    T_IF            shift, and go to state 3
    T_WHILE         shift, and go to state 4
    T_PRINT         shift, and go to state 5
    T_READ          shift, and go to state 6
    T_INT           shift, and go to state 7
    T_BOOLEAN       shift, and go to state 8
    T_LEFT_BRACKET  shift, and go to state 9

    compound_stmt  go to state 12
    stmt           go to state 33
    matched_stmt   go to state 14
    open_stmt      go to state 15
    simple_stmt    go to state 16


State 29

    5 compound_stmt: T_LEFT_BRACKET $@1 . T_RIGHT_BRACKET

    T_RIGHT_BRACKET  shift, and go to state 56


State 30

    7 compound_stmt: T_LEFT_BRACKET $@2 . stmt_list T_RIGHT_BRACKET

    error           shift, and go to state 1
    T_ID            shift, and go to state 2
    T_IF            shift, and go to state 3
    T_WHILE         shift, and go to state 4
    T_PRINT         shift, and go to state 5
    T_READ          shift, and go to state 6
    T_INT           shift, and go to state 7
    T_BOOLEAN       shift, and go to state 8
    T_LEFT_BRACKET  shift, and go to state 9

    stmt_list      go to state 57
    compound_stmt  go to state 12
    stmt           go to state 13
    matched_stmt   go to state 14
    open_stmt      go to state 15
    simple_stmt    go to state 16


State 31

    9 compound_stmt: T_LEFT_BRACKET $@3 . error T_RIGHT_BRACKET

    error  shift, and go to state 58


State 32

    0 $accept: program $end .

    $default  accept


State 33

    3 stmt_list: stmt_list stmt .

    $default  reduce using rule 3 (stmt_list)


State 34

   17 matched_stmt: error . T_ELSE matched_stmt

    T_ELSE  shift, and go to state 17


State 35

   16 matched_stmt: T_IF . T_LEFT_PAREN expr T_RIGHT_PAREN matched_stmt T_ELSE matched_stmt

    T_LEFT_PAREN  shift, and go to state 59


State 36

    5 compound_stmt: T_LEFT_BRACKET . $@1 T_RIGHT_BRACKET
    7              | T_LEFT_BRACKET . $@2 stmt_list T_RIGHT_BRACKET
    9              | T_LEFT_BRACKET . $@3 error T_RIGHT_BRACKET

    error            reduce using rule 6 ($@2)
    error            [reduce using rule 8 ($@3)]
    T_RIGHT_BRACKET  reduce using rule 4 ($@1)
    $default         reduce using rule 6 ($@2)

    $@1  go to state 29
    $@2  go to state 30
    $@3  go to state 31


State 37

   17 matched_stmt: error T_ELSE matched_stmt .

    $default  reduce using rule 17 (matched_stmt)


State 38

   50 primary_expr: T_ID .

    $default  reduce using rule 50 (primary_expr)


State 39

   49 primary_expr: T_NUMBER .

    $default  reduce using rule 49 (primary_expr)


State 40

   51 primary_expr: T_TRUE .

    $default  reduce using rule 51 (primary_expr)


State 41

   52 primary_expr: T_FALSE .

    $default  reduce using rule 52 (primary_expr)


State 42

   40 expr: T_NOT . expr

    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44

    expr          go to state 60
    primary_expr  go to state 46


State 43

   48 expr: T_LEFT_PAREN . expr T_RIGHT_PAREN

    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44

    expr          go to state 61
    primary_expr  go to state 46


State 44

   47 expr: T_MINUS . expr

    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44

    expr          go to state 62
    primary_expr  go to state 46


State 45

   31 simple_stmt: T_ID T_ATRIBUTION expr . T_SEMICOLON
   34 expr: expr . T_SUM expr
   35     | expr . T_MINUS expr
   36     | expr . T_MULT expr
   37     | expr . T_DIV expr
   38     | expr . T_AND expr
   39     | expr . T_OR expr
   41     | expr . T_EQUAL expr
   42     | expr . T_NOT_EQUAL expr
   43     | expr . T_LESSER expr
   44     | expr . T_GREATER expr
   45     | expr . T_LESSER_EQUAL expr
   46     | expr . T_GREATER_EQUAL expr

    T_EQUAL          shift, and go to state 63
    T_NOT_EQUAL      shift, and go to state 64
    T_LESSER_EQUAL   shift, and go to state 65
    T_GREATER_EQUAL  shift, and go to state 66
    T_LESSER         shift, and go to state 67
    T_GREATER        shift, and go to state 68
    T_AND            shift, and go to state 69
    T_OR             shift, and go to state 70
    T_SEMICOLON      shift, and go to state 71
    T_MINUS          shift, and go to state 72
    T_SUM            shift, and go to state 73
    T_DIV            shift, and go to state 74
    T_MULT           shift, and go to state 75


State 46

   33 expr: primary_expr .

    $default  reduce using rule 33 (expr)


State 47

   24 open_stmt: T_IF error expr . T_RIGHT_PAREN stmt
   34 expr: expr . T_SUM expr
   35     | expr . T_MINUS expr
   36     | expr . T_MULT expr
   37     | expr . T_DIV expr
   38     | expr . T_AND expr
   39     | expr . T_OR expr
   41     | expr . T_EQUAL expr
   42     | expr . T_NOT_EQUAL expr
   43     | expr . T_LESSER expr
   44     | expr . T_GREATER expr
   45     | expr . T_LESSER_EQUAL expr
   46     | expr . T_GREATER_EQUAL expr

    T_EQUAL          shift, and go to state 63
    T_NOT_EQUAL      shift, and go to state 64
    T_LESSER_EQUAL   shift, and go to state 65
    T_GREATER_EQUAL  shift, and go to state 66
    T_LESSER         shift, and go to state 67
    T_GREATER        shift, and go to state 68
    T_AND            shift, and go to state 69
    T_OR             shift, and go to state 70
    T_RIGHT_PAREN    shift, and go to state 76
    T_MINUS          shift, and go to state 72
    T_SUM            shift, and go to state 73
    T_DIV            shift, and go to state 74
    T_MULT           shift, and go to state 75


State 48

   16 matched_stmt: T_IF T_LEFT_PAREN expr . T_RIGHT_PAREN matched_stmt T_ELSE matched_stmt
   21 open_stmt: T_IF T_LEFT_PAREN expr . T_RIGHT_PAREN stmt
   22          | T_IF T_LEFT_PAREN expr . T_RIGHT_PAREN matched_stmt T_ELSE open_stmt
   23          | T_IF T_LEFT_PAREN expr . error stmt
   34 expr: expr . T_SUM expr
   35     | expr . T_MINUS expr
   36     | expr . T_MULT expr
   37     | expr . T_DIV expr
   38     | expr . T_AND expr
   39     | expr . T_OR expr
   41     | expr . T_EQUAL expr
   42     | expr . T_NOT_EQUAL expr
   43     | expr . T_LESSER expr
   44     | expr . T_GREATER expr
   45     | expr . T_LESSER_EQUAL expr
   46     | expr . T_GREATER_EQUAL expr

    error            shift, and go to state 77
    T_EQUAL          shift, and go to state 63
    T_NOT_EQUAL      shift, and go to state 64
    T_LESSER_EQUAL   shift, and go to state 65
    T_GREATER_EQUAL  shift, and go to state 66
    T_LESSER         shift, and go to state 67
    T_GREATER        shift, and go to state 68
    T_AND            shift, and go to state 69
    T_OR             shift, and go to state 70
    T_RIGHT_PAREN    shift, and go to state 78
    T_MINUS          shift, and go to state 72
    T_SUM            shift, and go to state 73
    T_DIV            shift, and go to state 74
    T_MULT           shift, and go to state 75


State 49

   20 matched_stmt: T_WHILE error expr . T_RIGHT_PAREN matched_stmt
   34 expr: expr . T_SUM expr
   35     | expr . T_MINUS expr
   36     | expr . T_MULT expr
   37     | expr . T_DIV expr
   38     | expr . T_AND expr
   39     | expr . T_OR expr
   41     | expr . T_EQUAL expr
   42     | expr . T_NOT_EQUAL expr
   43     | expr . T_LESSER expr
   44     | expr . T_GREATER expr
   45     | expr . T_LESSER_EQUAL expr
   46     | expr . T_GREATER_EQUAL expr

    T_EQUAL          shift, and go to state 63
    T_NOT_EQUAL      shift, and go to state 64
    T_LESSER_EQUAL   shift, and go to state 65
    T_GREATER_EQUAL  shift, and go to state 66
    T_LESSER         shift, and go to state 67
    T_GREATER        shift, and go to state 68
    T_AND            shift, and go to state 69
    T_OR             shift, and go to state 70
    T_RIGHT_PAREN    shift, and go to state 79
    T_MINUS          shift, and go to state 72
    T_SUM            shift, and go to state 73
    T_DIV            shift, and go to state 74
    T_MULT           shift, and go to state 75


State 50

   18 matched_stmt: T_WHILE T_LEFT_PAREN expr . T_RIGHT_PAREN matched_stmt
   19             | T_WHILE T_LEFT_PAREN expr . error matched_stmt
   34 expr: expr . T_SUM expr
   35     | expr . T_MINUS expr
   36     | expr . T_MULT expr
   37     | expr . T_DIV expr
   38     | expr . T_AND expr
   39     | expr . T_OR expr
   41     | expr . T_EQUAL expr
   42     | expr . T_NOT_EQUAL expr
   43     | expr . T_LESSER expr
   44     | expr . T_GREATER expr
   45     | expr . T_LESSER_EQUAL expr
   46     | expr . T_GREATER_EQUAL expr

    error            shift, and go to state 80
    T_EQUAL          shift, and go to state 63
    T_NOT_EQUAL      shift, and go to state 64
    T_LESSER_EQUAL   shift, and go to state 65
    T_GREATER_EQUAL  shift, and go to state 66
    T_LESSER         shift, and go to state 67
    T_GREATER        shift, and go to state 68
    T_AND            shift, and go to state 69
    T_OR             shift, and go to state 70
    T_RIGHT_PAREN    shift, and go to state 81
    T_MINUS          shift, and go to state 72
    T_SUM            shift, and go to state 73
    T_DIV            shift, and go to state 74
    T_MULT           shift, and go to state 75


State 51

   29 simple_stmt: T_PRINT T_LEFT_PAREN expr . T_RIGHT_PAREN T_SEMICOLON
   30            | T_PRINT T_LEFT_PAREN expr . error T_SEMICOLON
   34 expr: expr . T_SUM expr
   35     | expr . T_MINUS expr
   36     | expr . T_MULT expr
   37     | expr . T_DIV expr
   38     | expr . T_AND expr
   39     | expr . T_OR expr
   41     | expr . T_EQUAL expr
   42     | expr . T_NOT_EQUAL expr
   43     | expr . T_LESSER expr
   44     | expr . T_GREATER expr
   45     | expr . T_LESSER_EQUAL expr
   46     | expr . T_GREATER_EQUAL expr

    error            shift, and go to state 82
    T_EQUAL          shift, and go to state 63
    T_NOT_EQUAL      shift, and go to state 64
    T_LESSER_EQUAL   shift, and go to state 65
    T_GREATER_EQUAL  shift, and go to state 66
    T_LESSER         shift, and go to state 67
    T_GREATER        shift, and go to state 68
    T_AND            shift, and go to state 69
    T_OR             shift, and go to state 70
    T_RIGHT_PAREN    shift, and go to state 83
    T_MINUS          shift, and go to state 72
    T_SUM            shift, and go to state 73
    T_DIV            shift, and go to state 74
    T_MULT           shift, and go to state 75


State 52

   32 simple_stmt: T_READ T_LEFT_PAREN T_ID . T_RIGHT_PAREN T_SEMICOLON

    T_RIGHT_PAREN  shift, and go to state 84


State 53

   26 simple_stmt: T_INT T_ID T_ATRIBUTION . expr T_SEMICOLON
   27            | T_INT T_ID T_ATRIBUTION . error T_SEMICOLON

    error         shift, and go to state 85
    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44

    expr          go to state 86
    primary_expr  go to state 46


State 54

   25 simple_stmt: T_BOOLEAN T_ID T_ATRIBUTION . expr T_SEMICOLON
   28            | T_BOOLEAN T_ID T_ATRIBUTION . error T_SEMICOLON

    error         shift, and go to state 87
    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44

    expr          go to state 88
    primary_expr  go to state 46


State 55

   12 stmt: error . T_SEMICOLON
   13     | T_LEFT_BRACKET stmt_list error .
   17 matched_stmt: error . T_ELSE matched_stmt

    T_ELSE       shift, and go to state 17
    T_SEMICOLON  shift, and go to state 18

    $default  reduce using rule 13 (stmt)


State 56

    5 compound_stmt: T_LEFT_BRACKET $@1 T_RIGHT_BRACKET .

    $default  reduce using rule 5 (compound_stmt)


State 57

    3 stmt_list: stmt_list . stmt
    7 compound_stmt: T_LEFT_BRACKET $@2 stmt_list . T_RIGHT_BRACKET

    error            shift, and go to state 1
    T_ID             shift, and go to state 2
    T_IF             shift, and go to state 3
    T_WHILE          shift, and go to state 4
    T_PRINT          shift, and go to state 5
    T_READ           shift, and go to state 6
    T_INT            shift, and go to state 7
    T_BOOLEAN        shift, and go to state 8
    T_LEFT_BRACKET   shift, and go to state 9
    T_RIGHT_BRACKET  shift, and go to state 89

    compound_stmt  go to state 12
    stmt           go to state 33
    matched_stmt   go to state 14
    open_stmt      go to state 15
    simple_stmt    go to state 16


State 58

    9 compound_stmt: T_LEFT_BRACKET $@3 error . T_RIGHT_BRACKET

    T_RIGHT_BRACKET  shift, and go to state 90


State 59

   16 matched_stmt: T_IF T_LEFT_PAREN . expr T_RIGHT_PAREN matched_stmt T_ELSE matched_stmt

    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44

    expr          go to state 91
    primary_expr  go to state 46


State 60

   34 expr: expr . T_SUM expr
   35     | expr . T_MINUS expr
   36     | expr . T_MULT expr
   37     | expr . T_DIV expr
   38     | expr . T_AND expr
   39     | expr . T_OR expr
   40     | T_NOT expr .
   41     | expr . T_EQUAL expr
   42     | expr . T_NOT_EQUAL expr
   43     | expr . T_LESSER expr
   44     | expr . T_GREATER expr
   45     | expr . T_LESSER_EQUAL expr
   46     | expr . T_GREATER_EQUAL expr

    $default  reduce using rule 40 (expr)


State 61

   34 expr: expr . T_SUM expr
   35     | expr . T_MINUS expr
   36     | expr . T_MULT expr
   37     | expr . T_DIV expr
   38     | expr . T_AND expr
   39     | expr . T_OR expr
   41     | expr . T_EQUAL expr
   42     | expr . T_NOT_EQUAL expr
   43     | expr . T_LESSER expr
   44     | expr . T_GREATER expr
   45     | expr . T_LESSER_EQUAL expr
   46     | expr . T_GREATER_EQUAL expr
   48     | T_LEFT_PAREN expr . T_RIGHT_PAREN

    T_EQUAL          shift, and go to state 63
    T_NOT_EQUAL      shift, and go to state 64
    T_LESSER_EQUAL   shift, and go to state 65
    T_GREATER_EQUAL  shift, and go to state 66
    T_LESSER         shift, and go to state 67
    T_GREATER        shift, and go to state 68
    T_AND            shift, and go to state 69
    T_OR             shift, and go to state 70
    T_RIGHT_PAREN    shift, and go to state 92
    T_MINUS          shift, and go to state 72
    T_SUM            shift, and go to state 73
    T_DIV            shift, and go to state 74
    T_MULT           shift, and go to state 75


State 62

   34 expr: expr . T_SUM expr
   35     | expr . T_MINUS expr
   36     | expr . T_MULT expr
   37     | expr . T_DIV expr
   38     | expr . T_AND expr
   39     | expr . T_OR expr
   41     | expr . T_EQUAL expr
   42     | expr . T_NOT_EQUAL expr
   43     | expr . T_LESSER expr
   44     | expr . T_GREATER expr
   45     | expr . T_LESSER_EQUAL expr
   46     | expr . T_GREATER_EQUAL expr
   47     | T_MINUS expr .

    $default  reduce using rule 47 (expr)


State 63

   41 expr: expr T_EQUAL . expr

    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44

    expr          go to state 93
    primary_expr  go to state 46


State 64

   42 expr: expr T_NOT_EQUAL . expr

    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44

    expr          go to state 94
    primary_expr  go to state 46


State 65

   45 expr: expr T_LESSER_EQUAL . expr

    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44

    expr          go to state 95
    primary_expr  go to state 46


State 66

   46 expr: expr T_GREATER_EQUAL . expr

    T_ID          shift, and go to state 38
    T_NUMBER      shift, and go to state 39
    T_TRUE        shift, and go to state 40
    T_FALSE       shift, and go to state 41
    T_NOT         shift, and go to state 42
    T_LEFT_PAREN  shift, and go to state 43
    T_MINUS       shift, and go to state 44
